k8s/etcd.yaml
# --volume=/tmp/etcd-data:/etcd-data quay.io/coreos/etcd:latest /usr/local/bin/etcd --name my-etcd-1 --data-dir /etcd-data --listen-client-urls http://0.0.0.0:2379 --advertise-client-urls http://0.0.0.0:2379 --listen-peer-urls http://0.0.0.0:2380 --initial-advertise-peer-urls http://0.0.0.0:2380 --initial-cluster my-etcd-1=http://0.0.0.0:2380 --initial-cluster-token my-etcd-token --initial-cluster-state new --auto-compaction-retention 1 -cors="*"
apiVersion: apps/v1
kind: Deployment
metadata:
  name: etcd-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: etcd
  template:
    metadata:
      labels:
        app: etcd
    spec:
      containers:
        - image: quay.io/coreos/etcd:latest # bitnami/etcd:latest
          name: etcd
          ports:
            - containerPort: 2379
              name: server
              protocol: TCP
            - containerPort: 2380
              name: peer
              protocol: TCP
          args:
          # - "--listen-client-urls http://localhost:2379"
          # - "--advertise-client-urls http://0.0.0.0:2379"
          # - "--listen-peer-urls http://0.0.0.0:2380"
          # - "--initial-advertise-peer-urls http://0.0.0.0:2380"
          # - "--initial-cluster my-etcd-1=http://0.0.0.0:2380"
          # - "--initial-cluster-token my-etcd-token"
          # - "--initial-cluster-state new"
          # - "--auto-compaction-retention 1"
          # - "-cors=\"*\""

---

apiVersion: v1
kind: Service
metadata:
  name: etcd
spec:
  type: ClusterIP
  ports:
    - port: 2379
      protocol: TCP
      targetPort: server
      name: port2379
    - port: 2380
      protocol: TCP
      targetPort: peer
      name: port2380
  selector:
    app: etcd
