k8s/exhibition-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exhibition-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exhibition
  template:
    metadata:
      labels:
        app: exhibition
    spec:
      containers:
        # Izbrati moras zadnji tag
        - image: rsogalerija/exhibition:1.0.0-SNAPSHOT-10.1
          name: exhibition
          ports:
            - containerPort: 8080
              name: server
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health/live
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /health/ready
              port: server
            initialDelaySeconds: 20
            periodSeconds: 3


---

apiVersion: v1
kind: Service
metadata:
  name: exhibition
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      targetPort: server
  selector:
    app: exhibition
